feat(v1.3): complete Phase 3 - StreamSections, Outer Zstd & Integrity Chain
- Implemented StreamSection with manifest and payload grouping.
- Integrated Zstd outer compression.
- Added SHA-256 hash integrity chain (strict/warn modes).
- Removed legacy single-item fallback (SNAPSHOT_LEN is mandatory).
- Added comprehensive v1.3 format tests.
- Fixed flaky corruption detection test in monkey tests.
- Updated production plan.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,17 @@
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "types": [
+            "node",
+            "vitest/globals"
+        ]
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "tests/**/*"
     ],
     "exclude": [
-        "node_modules",
-        "tests"
+        "node_modules"
     ]
 }
