ci(sonarcloud): enable automatic analysis via GitHub Actions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,11 @@
 # SonarQube properties file
 # Project identification
-sonar.projectKey=gics-core
+sonar.projectKey=Shiloren_Gred-In-Compression-System
 sonar.projectName=GICS Core (Gred-In-Compression-System)
 sonar.projectVersion=1.3.0
+
+# SonarCloud (required). If your SonarCloud organization key differs, change it here.
+sonar.organization=shiloren
 
 # Source and Test paths
 sonar.sources=src
