--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -50,6 +50,6 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # Default expects a repo secret named SONAR_TOKEN.
-          # If you created it with a different name (e.g. "sonarqube"), change it here.
-          SONAR_TOKEN: ${{ secrets.sonarqube }}
+          # SonarCloud token stored as a GitHub Actions secret.
+          # Expected secret name: SONAR_TOKEN
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
