--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,11 @@
 # SonarQube properties file
 # Project identification
+# NOTE: Must match SonarCloud "Project Key" exactly.
 sonar.projectKey=Shiloren_Gred-In-Compression-System
 sonar.projectName=GICS Core (Gred-In-Compression-System)
 sonar.projectVersion=1.3.0
 
-# SonarCloud (required). If your SonarCloud organization key differs, change it here.
+# SonarCloud (required). Must match SonarCloud "Organization Key" exactly.
 sonar.organization=shiloren
 
 # Source and Test paths
