--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-    "name": "gics-core",
+    "name": "@giltech/gics-core",
     "version": "1.3.0",
     "description": "GICS core compression library (generic)",
     "type": "module",
     "main": "dist/src/index.js",
     "types": "dist/src/index.d.ts",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/shiloren/Gred-In-Compression-System.git"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
     "files": [
         "dist",
         "README.md"
@@ -12,6 +19,7 @@
     "scripts": {
         "build": "tsc",
         "test": "vitest run",
+        "prepublishOnly": "npm run build",
         "bench": "tsx bench/scripts/harness.ts && tsx bench/scripts/gen-report.ts",
         "bench:forensics": "tsx bench/forensics/postfreeze/harness.postfreeze.ts",
         "bench:forensics:verify": "tsx bench/forensics/postfreeze/verifier.postfreeze.ts",
