--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,33 @@ permissions:
   pull-requests: read
 
 jobs:
+  benchmark-gate:
+    name: Benchmark Gate (Empirical)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: Run empirical benchmark gate (50x)
+        run: npm run bench:gate
+
+      - name: Upload benchmark artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: empirical-benchmark-report
+          path: |
+            bench/results/latest/empirical-report.json
+            bench/results/latest/empirical-report.md
+
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
