--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gredinlabstechnologies/gics-core",
-    "version": "1.3.1",
+    "version": "1.3.2",
     "description": "GICS core compression library (generic)",
     "type": "module",
     "main": "dist/src/index.js",
@@ -21,14 +21,20 @@
         "test": "vitest run",
         "prepublishOnly": "npm run build",
         "bench": "tsx bench/scripts/harness.ts && tsx bench/scripts/gen-report.ts",
+        "bench:empirical": "tsx bench/scripts/empirical.ts",
+        "bench:gate": "tsx bench/scripts/empirical.ts",
         "bench:forensics": "tsx bench/forensics/postfreeze/harness.postfreeze.ts",
         "bench:forensics:verify": "tsx bench/forensics/postfreeze/verifier.postfreeze.ts",
         "bench:forensics:summary": "tsx bench/forensics/postfreeze/summary.postfreeze.ts",
         "verify": "tsx tools/verify/verify.ts",
         "sonar": "sonar-scanner",
-        "lint": "eslint src/**/*.ts"
+        "lint": "eslint src/**/*.ts",
+        "bench:strict": "tsx bench/scripts/empirical-strict.ts"
     },
     "dependencies": {
+        "@msgpack/msgpack": "^3.1.3",
+        "apache-arrow": "^21.1.0",
+        "protobufjs": "^8.0.0",
         "zstd-codec": "^0.1.5"
     },
     "devDependencies": {
