--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@
 # NOTE: Must match SonarCloud "Project Key" exactly.
 sonar.projectKey=Shiloren_Gred-In-Compression-System
 sonar.projectName=GICS Core (Gred-In-Compression-System)
-sonar.projectVersion=1.3.0
+sonar.projectVersion=1.3.2
 
 # SonarCloud (required). Must match SonarCloud "Organization Key" exactly.
 sonar.organization=shiloren
@@ -11,7 +11,7 @@ sonar.organization=shiloren
 # Source and Test paths
 sonar.sources=src
 sonar.tests=tests
-sonar.exclusions=node_modules/**, dist/**, bench/**, tools/**
+sonar.exclusions=node_modules/**,dist/**,bench/**,tools/**,coverage/**,reports/**
 sonar.test.inclusions=tests/**/*.test.ts, tests/**/*.spec.ts
 
 # Source encoding
@@ -20,6 +20,7 @@ sonar.sourceEncoding=UTF-8
 # TypeScript configuration
 sonar.typescript.tsconfigPath=tsconfig.json
 
-# Coverage (Optional but recommended)
-# To enable this, run: npm test -- --coverage
-# sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# Coverage & test execution reports (SonarCloud-ready)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+# Test report artifact is generated at reports/vitest-junit.xml for CI auditing.
+# SonarCloud ingestion for JS/TS uses LCOV coverage path above.
